# CMakeSeriesYT

./: README.md
EP002/Source/: CMakeLists.txt  main.cpp
EP002/source/: main.cpp
EP005/Source/: CMakeLists.txt  main.cpp
EP005/Source/include/: dog.h
EP005/Source/src/: Operation.cpp
EP007/Source/: CMakeLists.txt  information.txt  main.cpp
EP007/Source/logger/: CMakeLists.txt
EP007/Source/logger/include/: log.h
EP007/Source/logger/src/: log.cpp
EP007/Source/src/: dog.cpp
